objects/QuoteLine__c.object
<CustomObject>
    <description>削除対象OBject</description>
    <fields>
        <fullName>BesshiMeisai__c</fullName>
        <label>別紙明細</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchNo__c</fullName>
        <formula>Quote__r.BranchNo__c</formula>
        <label>枝番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChohyoShutsuryokuHinmoku__c</fullName>
        <label>帳票出力品目</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GokeKingaku__c</fullName>
        <label>合計金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GokeNebikiKingaku__c</fullName>
        <label>合計値引金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hinmei__c</fullName>
        <label>品名</label>
        <length>264</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HinmokuSignal__c</fullName>
        <label>品目シグナル</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hinmoku__c</fullName>
        <label>品目</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KaiPage__c</fullName>
        <label>改ページ</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KazeiKubun__c</fullName>
        <label>課税区分</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kikaku__c</fullName>
        <label>規格</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kingaku__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KomokuSeigyoFlg__c</fullName>
        <label>項目制御フラグ</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeisaiKingakuShutsuryoku__c</fullName>
        <label>明細金額出力</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeisaiShutsuryoku__c</fullName>
        <label>明細出力</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NebikiKingaku__c</fullName>
        <label>値引金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NebikiRitsu__c</fullName>
        <label>値引率</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QuoteNo_BranchNo_SEQ_Sync__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>見積No/枝番/SEQ</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>見積</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>見積ライン</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>RegisteredDate__c</fullName>
        <formula>Quote__r.RegisteredDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>REMARKS</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ__c</fullName>
        <label>SEQ</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shokehi__c</fullName>
        <label>諸経費</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShukeKey__c</fullName>
        <label>集計キー</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShukeRow__c</fullName>
        <label>集計行</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suryo__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaniName__c</fullName>
        <label>単位名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tani__c</fullName>
        <label>単位</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tanka__c</fullName>
        <label>単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>見積ライン</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SEQ__c</columns>
        <columns>Hinmoku__c</columns>
        <columns>Hinmei__c</columns>
        <columns>ChohyoShutsuryokuHinmoku__c</columns>
        <columns>HinmokuSignal__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>見積ライン</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>